--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href="css/normalize.css" rel='stylesheet'/>    <link href="css/icons.css" rel='stylesheet'/>
+    <link href="css/normalize.css" rel='stylesheet'/>    
+    <link href="css/icons.css" rel='stylesheet'/>
     <link href="css/stye.css" rel='stylesheet'/>    
     <title>Carrera Las Alamedas 2015</title>
 </head>
@@ -15,39 +16,47 @@
         <nav></nav>
     </header>
     <section id="content">
-        <article class="carrera-hero">
-            <div class"">
+        <article class="carrera-hero pure-g">
+        <div class="pantalla"></div>
+            <div class="logo pure-u-1-4">
                 <img src="img/logo-carrera.png">
             </div>
-            <div class="">
-                <h2>Carrera las Alamedas
-                <span>2015</span>
+            <div class="hero pure-u-3-4">
+                <h2>Carrera las<br/>
+                Alamedas <span>2015</span>
                 </h2>
+                <p>Participa en la carrera las alamedas 2015, diviertete,  Compite por magnificos Premios y Promueve  los valores de méxico</p>
             </div>
         </article>
-        <div>
+        <div class="carrera-datos pure-g">
+            <div class="pure-u-1-2">
+                <ul>
+                    <li> 5 Kilometros</li> 
+                    <li> Mayores de 18 años</li> 
+                    <li> Una sola Categoría, Damas y Varones.</li>
+                    <li> Premios e Incentivos económicos. </li>
+                </ul>
+            </div>
+            <div class="pure-u-1-2">
+                <img src="img/logo-jd.png"/>
+            </div>
+            <h2>¡ ganar esta en ti !</h2>
+        </div>
+        <div class="valores">
+            <h2>Promoviendo Los Valores & Aptitudes que Hacen un Mejor México</h2>
             <p>Salud, Constancia, Esfuerzo, Disciplina, Compañerismo, 
             Pasión, Respeto, Inteligencia, Fuerza de Voluntad, Paciencia.</p>
         </div>
-        <div class="carrera-datos">
-            <ul>
-                <li> 5 Kilometros</li> 
-                <li> Mayores de 18 años</li> 
-                <li> Una sola Categoría, Damas y Varones.</li>
-                <li> Premios e Incentivos económicos. </li>
-            </ul>
-            <img src="img/logo-jd.png"/>
-            <h2>¡ ganar esta en ti !</h2>
-        </div>
-        <div class="greatw">
-            <div>
+        <div class="greatwall pure-g">
+            <div class="pantalla"></div>
+            <div class="pure-u-1-3 gw-logo">
                 <p>J.D. Con Rumbo a:</p>
-                <img src="img/logo-gw"/>
+                <img src="img/logo-gw.png"/>
                 <p>MARATÓN DE LA GRAN MURALLA CHINA</p>
             </div>
-            <div>
-                <h2>Ayudanos a Poner en Alto el Nombre de
-                    <span>México</span>
+            <div class="pure-u-2-3 gw-hero">
+                <h2>Ayudanos a Poner en </br>Alto el Nombre de
+                    <br/><span>México</span>
                 </h2>
             </div>
         </div>
@@ -75,11 +84,29 @@
         </div>
         <div class="patrocinadores">
             <h2>Ellos Nos Brindan su Apoyo y Confianza</h2>
-            <ul>
-                <li></li>
+            <ul class="imagenes-p pure-g">
+                <li class="pure-u-1-8"><img src="img/logos-p/adami.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/CLIP.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/adami.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/CLIP.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
+
             </ul>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <p>Navega y Encuentra</p>
+    </footer>
 </body>
 </html>   
