--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -73,10 +73,16 @@
                             <li class="icon-mail">carreralasalamedas2015@gmail</li>
                         </ul>
                     </li>
-                    <li>Celular & whassap
+                    <li>Celular & whatssap
                         <ul>
                             <li class="icon-device-mobile">55 3708 7987</li>
                             <li class="icon-device-mobile">55 4500 0920</li>
+                        </ul>
+                    </li>
+                    <li>
+                        facebook
+                        <ul>
+                            <li class="icon-device-mobile">carreralasalamedas</li>
                         </ul>
                     </li>
                 </ul>    
@@ -89,24 +95,20 @@
                 <li class="pure-u-1-8"><img src="img/logos-p/CLIP.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/adami.png"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/CLIP.png"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/sindicato.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/nav.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/pape-estrella.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/seprom.jpeg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/TORNILLO.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/unimac.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
-
             </ul>
         </div>
     </section>
     <footer>
-        <p>Navega y Encuentra</p>
+        <p>Carrera las alamedas 2015 - Pagina diseñada por Navega y Encuentra</p>
     </footer>
 </body>
 </html>   
