--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset = "utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700|Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href="css/normalize.css" rel='stylesheet'/>    
     <link href="css/icons.css" rel='stylesheet'/>
     <link href="css/stye.css" rel='stylesheet'/>    
@@ -23,24 +22,39 @@
             </div>
             <div class="hero pure-u-3-4">
                 <h2>Carrera las<br/>
-                Alamedas <span>2015</span>
+                Alamedas 2015<br/>
+                <span>8 MARZO</span>
                 </h2>
                 <p>Participa en la carrera las alamedas 2015, diviertete,  Compite por magnificos Premios y Promueve  los valores de méxico</p>
             </div>
         </article>
+        <nav>
+            <ul>
+                <li><a href="#">Convocatoria</a></li>                
+                <li><a href="#">Valores</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
         <div class="carrera-datos pure-g">
-            <div class="pure-u-1-2">
+            <h2 class="pure-u-1">Convocatoria Carrera Las Alamedas 2015</h2>
+            <div class="info pure-u-2-3">
+                <p>Te invitamos a participar en este gran festejo.</p>
+
+                <p>Prepararte e inscribirte a tiempo. Ven a correr  
+                    y divertete junto con tu familia en la Carrera las Alamedas.</p>
+
+                <h3>Datos del evento</h3>
                 <ul>
-                    <li> 5 Kilometros</li> 
-                    <li> Mayores de 18 años</li> 
-                    <li> Una sola Categoría, Damas y Varones.</li>
-                    <li> Premios e Incentivos económicos. </li>
+                    <li>Fecha: Domingo 01 de Marzo, 2015</li>
+                    <li>Distancia: Carrera de 5 Km</li>
+                    <li>Categorias: Una sola categoría para hombres y mujeres mayores de 18 años</li>
+                    <li>Premios e Incentivos Económicos</li>
                 </ul>
             </div>
-            <div class="pure-u-1-2">
+            <div class="jd pure-u-1-3">
                 <img src="img/logo-jd.png"/>
+                <h2>¡ Ganar Esta en Ti !</h2>
             </div>
-            <h2>¡ ganar esta en ti !</h2>
         </div>
         <div class="valores">
             <h2>Promoviendo Los Valores & Aptitudes que Hacen un Mejor México</h2>
@@ -82,7 +96,7 @@
                     <li>
                         facebook
                         <ul>
-                            <li class="icon-device-mobile">carreralasalamedas</li>
+                            <li class="icon-facebook">carreralasalamedas</li>
                         </ul>
                     </li>
                 </ul>    
@@ -92,7 +106,7 @@
             <h2>Ellos Nos Brindan su Apoyo y Confianza</h2>
             <ul class="imagenes-p pure-g">
                 <li class="pure-u-1-8"><img src="img/logos-p/adami.png"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/CLIP.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/clip.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
