--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -25,7 +25,8 @@
                 Alamedas 2015<br/>
                 <span>8 MARZO</span>
                 </h2>
-                <p>Participa en la carrera las alamedas 2015, diviertete,  Compite por magnificos Premios y Promueve  los valores de méxico</p>
+                <p>Es Dificil Vencer a la Persona que Nunca se Rinde <br/>
+                    ! Se esa Persona ¡</p>
             </div>
         </article>
         <nav>
@@ -38,18 +39,16 @@
         <div class="carrera-datos pure-g">
             <h2 class="pure-u-1">Convocatoria Carrera Las Alamedas 2015</h2>
             <div class="info pure-u-2-3">
-                <p>Te invitamos a participar en este gran festejo.</p>
-
-                <p>Prepararte e inscribirte a tiempo. Ven a correr  
-                    y divertete junto con tu familia en la Carrera las Alamedas.</p>
+                <p>Entrenate e inscribete a tiempo</p>
 
                 <h3>Datos del evento</h3>
                 <ul>
-                    <li>Fecha: Domingo 01 de Marzo, 2015</li>
-                    <li>Distancia: Carrera de 5 Km</li>
-                    <li>Categorias: Una sola categoría para hombres y mujeres mayores de 18 años</li>
-                    <li>Premios e Incentivos Económicos</li>
+                    <li>Fecha: Domingo 8 de Marzo, 2015</li>
+                    <li>Distancia: 5 Km</li>
                 </ul>
+                    
+                    <p>Una sola categoría para hombres y mujeres mayores de 18 años</p>
+                    <p>Medalla para todos los participantes e incentivos económicos para los primeros lugares</p>
             </div>
             <div class="jd pure-u-1-3">
                 <img src="img/logo-jd.png"/>
@@ -57,7 +56,7 @@
             </div>
         </div>
         <div class="valores">
-            <h2>Promoviendo Los Valores & Aptitudes que Hacen un Mejor México</h2>
+            <h2>Promoviendo Los Valores & Aptitudes Para Construir un Mejor México</h2>
             <p>Salud, Constancia, Esfuerzo, Disciplina, Compañerismo, 
             Pasión, Respeto, Inteligencia, Fuerza de Voluntad, Paciencia.</p>
         </div>
@@ -69,7 +68,7 @@
                 <p>MARATÓN DE LA GRAN MURALLA CHINA</p>
             </div>
             <div class="pure-u-2-3 gw-hero">
-                <h2>Ayudanos a Poner en </br>Alto el Nombre de
+                <h2>Vamos a Poner en </br>Alto el Nombre de
                     <br/><span>México</span>
                 </h2>
             </div>
@@ -84,26 +83,26 @@
                 <ul>
                     <li>Email
                         <ul>
-                            <li class="icon-mail">carreralasalamedas2015@gmail</li>
+                            <li class="icon-mail">carreralasalamedas2015@gmail.com</li>
                         </ul>
                     </li>
                     <li>Celular & whatssap
                         <ul>
-                            <li class="icon-device-mobile">55 3708 7987</li>
+                            <li class="icon-device-mobile">55 1723 6894</li>
                             <li class="icon-device-mobile">55 4500 0920</li>
                         </ul>
                     </li>
                     <li>
                         facebook
                         <ul>
-                            <li class="icon-facebook">carreralasalamedas</li>
+                            <li class="icon-facebook">carreralasalamedas2015</li>
                         </ul>
                     </li>
                 </ul>    
             </div>
         </div>
         <div class="patrocinadores">
-            <h2>Ellos Nos Brindan su Apoyo y Confianza</h2>
+            <h2>Más que Patrocinadores... Cómplices de un Sueño</h2>
             <ul class="imagenes-p pure-g">
                 <li class="pure-u-1-8"><img src="img/logos-p/adami.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/clip.png"/></li>
@@ -120,6 +119,7 @@
                 <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
             </ul>
         </div>
+        https://docs.google.com/forms/d/1ZVUPNwx8VZ
     </section>
     <footer>
         <p>Carrera las alamedas 2015 - Pagina diseñada por Navega y Encuentra</p>
