--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -25,8 +25,8 @@
                 Alamedas 2015<br/>
                 <span>8 MARZO</span>
                 </h2>
-                <p>Es Dificil Vencer a la Persona que Nunca se Rinde <br/>
-                    ! Se esa Persona ¡</p>
+                <p>Es Difícil Vencer a la Persona que Nunca se Rinde <br/>
+                    ! Sé esa Persona ¡</p>
             </div>
         </article>
         <nav>
