--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -60,7 +60,7 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
             </div>
         </div>
         <div class="inscripcion" id="ins">
-            <h2>Entrenate e inscribete a tiempo</h2>
+            <h2>Entrénate e inscríbete a tiempo</h2>
             <a class="button btninscripcion" href="https://docs.google.com/forms/d/1ZVUPNwx8VZwGzhxF4E5RlOs4Og0RacHNurt8eBiwZYI/viewform?usp=send_form" target="_blank">Formato de Inscripción</a>
         </div>
         <div class="greatwall pure-g">
@@ -83,7 +83,7 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
         </div>
         <div id="contacto" class="contacto pure-g">
              <h2 class="pure-u-1-2">Cualquier Duda o Comentario 
-                 Comunicate con Nosotros
+                 Comunícate con Nosotros
              </h2>
             <div class="pure-u-1-2 contacto-datos">
                 <ul>
@@ -129,13 +129,24 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
                 <li class="pure-u-1-8"><img src="img/logos-p/delicias-original.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/GABYLU.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/re.JPG"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/sindicato.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/nav.png"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/pape-estrella.png"/></li>
-                <li class="pure-u-1-8"><img src="img/logos-p/seprom.jpeg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/TORNILLO.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/ac-valle-dorado.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/cos.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/dec-marketing.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/mercenarios.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/metropolis.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/herreria.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/ilumina-nte.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/liverpool-inst.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/dulceduck.jpg"/></li>
                 <li class="pure-u-1-8"><img src="img/logos-p/huaraches-el-arco.jpg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/itvam.png"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/seprom.jpeg"/></li>
+                <li class="pure-u-1-8"><img src="img/logos-p/jardin-guadalupano.jpg"/></li>
+                
             </ul>
         </div>
     </section>
