--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -10,8 +10,11 @@
     <title>Carrera Las Alamedas 2015</title>
 </head>
 <body> 
-    <header class="">
-        <h1 class="pure-u logo-white">carrera las alamedas</h1>
+    <header class="pure-g">
+        <h1 class="pure-u-1-3 logo-white">carrera las alamedas</h1>
+        <div class="pure-u-2-3 organizadores">
+            <p class="logo-ajua"></p>
+        </div>
     </header>
     <section id="content">
         <article class="carrera-hero pure-g">
@@ -64,7 +67,8 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
             <a class="button btninscripcion" href="https://docs.google.com/forms/d/1ZVUPNwx8VZwGzhxF4E5RlOs4Og0RacHNurt8eBiwZYI/viewform?usp=send_form" target="_blank">Formato de Inscripción</a>
         </div>
         <div class="greatwall pure-g">
-            <div class="pantalla"></div>
+            <div 
+                 class="pantalla"></div>
             <div class="pure-u-1-3 gw-logo">
                 <p>J.D. Con Rumbo a:</p>
                 <img src="img/logo-gw.png"/>
