--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -66,9 +66,35 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
             <h2>Entrénate e inscríbete a tiempo</h2>
             <a class="button btninscripcion" href="https://docs.google.com/forms/d/1ZVUPNwx8VZwGzhxF4E5RlOs4Og0RacHNurt8eBiwZYI/viewform?usp=send_form" target="_blank">Formato de Inscripción</a>
         </div>
+        <div class="pure-g sedes">
+            <h2 class="pure-u-1">Sedes Para inscripción</h2>
+            <h3 class="pure-u-1">
+                Puedes acudir a cualquiera de estos lugares, en el horario establecido para inscribirte a la carrera 
+            </h3>
+            <div class="pure-u-1-3 sbox">
+                <img src="img/logos-p/re.JPG"/>
+                <h3>Restaurante "Tal por Cual"</h3>
+                <p class="horario">Horario<br>
+                <span>7:00am - 5:00pm</span></p>
+                <p>Blvd. Ruíz Cortínez #20<br>
+                    Las Alamedas, Atizapán de Zaragoza
+                </p>
+            </div>
+            <div class="pure-u-1-3 sbox">
+                <img src="img/logos-p/liverpool-inst.png"/>
+                <h3>Instituto Liverpool</h3>
+                <p class="horario">Horario<br>
+                <span>7:00am - 7:00pm</span></p>
+                <p>Blvd. Ruíz Cortínez #208<br>
+                    (casi frente a los camiones que van a a zona esmeralda)<br>
+                    Las Alamedas, Atizapán de Zaragoza
+                </p>
+            </div>
+            <div class="pure-u-1-3">
+            </div>
+        </div>
         <div class="greatwall pure-g">
-            <div 
-                 class="pantalla"></div>
+            <div class="pantalla"></div>
             <div class="pure-u-1-3 gw-logo">
                 <p>J.D. Con Rumbo a:</p>
                 <img src="img/logo-gw.png"/>
