--- a/carreralasalamedas/index.html
+++ b/carreralasalamedas/index.html
@@ -12,9 +12,6 @@
 <body> 
     <header class="pure-g">
         <h1 class="pure-u-1-3 logo-white">carrera las alamedas</h1>
-        <div class="pure-u-2-3 organizadores">
-            <p class="logo-ajua"></p>
-        </div>
     </header>
     <section id="content">
         <article class="carrera-hero pure-g">
@@ -60,6 +57,12 @@ Abierto a cualquier persona, y puedes CAMINAR, TROTAR O CORRER.</p>
             <div class="jd pure-u-1-3">
                 <img src="img/logo-jd.png"/>
                 <h2>¡ Ganar Esta en Ti !</h2>
+            </div>
+        </div>
+        <div class="pure-g">
+            <h2 class="pure-u-1">Circuito de la Carrera</h2>
+            <div class="pure-u-1 mapa">
+                <img src="img/map.png"/>
             </div>
         </div>
         <div class="inscripcion" id="ins">
